--- a/part2/courseinfo/src/index.css
+++ b/part2/courseinfo/src/index.css
@@ -18,3 +18,13 @@ h1 {
     padding: 10px;
     margin-bottom: 10px;
 }
+
+.notification {
+    color: white;
+    background: #4ea64e;
+    font-size: 20px;
+    border-style: solid;
+    border-radius: 5px;
+    padding: 10px;
+    margin-bottom: 10px;
+}
